# rustupr

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yaml
src/: install_rustup.rs  lib.rs
