[package]
name = "rustupr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
command-rs = {path = "../command-rs"}
thiserror = "1.0.28"
kiruna = {git = "https://github.com/drewcrawford/kiruna"}

[dev-dependencies]
kiruna = {git = "https://github.com/drewcrawford/kiruna", features=["test"]}